--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
-/* .table-style{
-    margin-left: 50px;
-} */
+@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Roboto+Slab:wght@400;900&family=Roboto:wght@400;700&display=swap');
+
+
 th{
     padding: 10px 10px;
     background-color: lightgray;
@@ -17,30 +17,34 @@ th{
       margin-top: 10px;
       background-color: aliceblue;
   }
-  .location{
-      /* border: solid 1px rgb(77, 2, 2); */
-      /* background-color: lightgray; */
-  }
-  header{
-      background-color: rgb(231, 226, 226);
-  }
-  header img{
-      margin-left: 20%;
+ 
+  #salmon-img{
+      width: 100%;
+  background-color: rgb(223, 213, 213);
+ }
+  #salmon-img img{
+      padding-left: 20%;
+     padding-top: 100px;
+      padding-bottom: 50px;
+     
   }
   header  h1{
       text-align: center;
       background-color:rgb(105, 165, 105);
+      font-size: 35px;
+      padding: 15px 0px;
  }
  header  h1:hover{
      color: rgb(247, 15, 15);
  }
   #salesTabel{
-      margin-left: 100px;
+      margin-left: 150px;
       margin-top: 100px;
+      margin-bottom: 50px;
   }
   #nav{
       width: 100%;
-      position: static;
+      position: fixed;
       z-index: 2;
       background-color: rgb(105, 165, 105);
       text-align: center;
@@ -57,5 +61,101 @@ th{
   header nav a:hover{
       background-color: gray;
   }
+/* ----------main------------- */
 
+#intro-section {
+    height: 500px;
+    text-align: center;
+    padding: 75px 120px;
+    background-color: rgb(211, 200, 200);
+}
+#samples img {
+    width: 33%;
+    height: 300px;
+    border-radius: 30%;
+    border: 3px #3e4149 solid;
+    background-color: rgb(192, 186, 186);
+}
+#bio{
+    margin-bottom: 50px;
+}
+
+#bio p {
+    width: 80%;
+    font-size: large;
+    line-height: 25px;
+    text-align: justify;
+    display: inline-block;
+    /* background-color: white; */
+    padding: 10px;
+    border: 10px groove #3e4149;
+}
+
+#location-section {
+    height: 340px;
+    background-color: rgb(211, 200, 200);
+    margin: 0;
+    padding: 75px 120px;
+    color: #050505;
+    font-size: x-large;
+    text-align: center;
+}
+
+#location-section div {
+    display: inline-block;
+}
+
+#locations-div {
+    font-family: 'Roboto Slab', serif;
+    margin-right: 200px;
+    text-align: left;
+}
+.marker img{
+    width: 40px;
+    
+}
+#locations-div li{
+    margin-top: 10px;
+}
+
+#imgMap-div img {
+    width: 300px;
+    margin-bottom: 20px;
+}
+
+#contactInfo-section {
+    font-size: x-large;
+    padding: 75px 120px;
+    text-align: center;
+    background-color:  rgb(211, 200, 200);
+}
+#contactInfo-section div h3{
+    margin-right: 80px;
+}
+
+#contactInfo-section img {
+    width: 100px;
+}
+
+#contactInfo-section ul {
+    list-style: none;
+    
+}
+
+#contactInfo-section li {
+    font-family: 'Roboto Slab', serif;
+    display: inline-block;
+    margin-right: 80px;
+    margin-top: 50px;
+}
+/* ------------Footer------------- */
+
+footer div {
+    background-color: #3e4149;
+    color: #ffc8c8;
+    margin-bottom: 0;
+    height: 50px;
+    text-align: center;
+    padding: 10px;
+}
   
