--- a/css/styles.css
+++ b/css/styles.css
@@ -23,36 +23,46 @@ th{
   background-color: rgb(223, 213, 213);
  }
   #salmon-img img{
-      padding-left: 20%;
-     padding-top: 100px;
-      padding-bottom: 50px;
+      width: 100%;
      
+  }
+  #samon-img{
+      width: 100%;
+      background-color:rgb(211, 200, 200);
+  }
+  #samon-img img {
+      width: 50%;
+      padding-left: 25%;
+      padding-top: 50px;
+      padding-bottom: 50px;
   }
   header  h1{
       text-align: center;
-      background-color:rgb(105, 165, 105);
+      background-color:rgb(7, 7, 7);
       font-size: 35px;
       padding: 15px 0px;
+      color: lightgoldenrodyellow;
  }
  header  h1:hover{
      color: rgb(247, 15, 15);
  }
   #salesTabel{
-      margin-left: 150px;
-      margin-top: 100px;
-      margin-bottom: 50px;
+      padding-left: 150px;
+      padding-top: 100px;
+      padding-bottom: 50px;
+      background-color:rgb(211, 200, 200) ;
   }
   #nav{
       width: 100%;
       position: fixed;
       z-index: 2;
-      background-color: rgb(105, 165, 105);
+      background-color: rgb(0, 0, 0);
       text-align: center;
       padding: 15px;
   }
   header nav a{
      margin-right: 100px;
-      color:black;
+      color:rgb(255, 253, 253);
       font-weight: bolder;
       font-size: 20px;
       text-decoration: none;
@@ -60,6 +70,7 @@ th{
   }
   header nav a:hover{
       background-color: gray;
+      color: red;
   }
 /* ----------main------------- */
 
@@ -69,6 +80,10 @@ th{
     padding: 75px 120px;
     background-color: rgb(211, 200, 200);
 }
+#intro-section h3{
+    font-size: 40px;
+    padding-bottom: 30px;
+}
 #samples img {
     width: 33%;
     height: 300px;
@@ -77,24 +92,25 @@ th{
     background-color: rgb(192, 186, 186);
 }
 #bio{
-    margin-bottom: 50px;
+   padding-bottom: 100px;
+    width: 100%;
 }
 
 #bio p {
     width: 80%;
-    font-size: large;
-    line-height: 25px;
-    text-align: justify;
+    font-size: 25px;
+    line-height: 40px;
+    text-align: center;
     display: inline-block;
-    /* background-color: white; */
+   
     padding: 10px;
-    border: 10px groove #3e4149;
+    /* border: 10px groove #3e4149; */
 }
 
 #location-section {
     height: 340px;
     background-color: rgb(211, 200, 200);
-    margin: 0;
+   
     padding: 75px 120px;
     color: #050505;
     font-size: x-large;
@@ -109,6 +125,7 @@ th{
     font-family: 'Roboto Slab', serif;
     margin-right: 200px;
     text-align: left;
+    margin-top: 250px;
 }
 .marker img{
     width: 40px;
@@ -129,6 +146,9 @@ th{
     text-align: center;
     background-color:  rgb(211, 200, 200);
 }
+#contactInfo-section div{
+    margin-top: 150px;
+}
 #contactInfo-section div h3{
     margin-right: 80px;
 }
@@ -143,7 +163,7 @@ th{
 }
 
 #contactInfo-section li {
-    font-family: 'Roboto Slab', serif;
+    
     display: inline-block;
     margin-right: 80px;
     margin-top: 50px;
@@ -151,11 +171,18 @@ th{
 /* ------------Footer------------- */
 
 footer div {
-    background-color: #3e4149;
+    background-color: #030303;
     color: #ffc8c8;
     margin-bottom: 0;
     height: 50px;
     text-align: center;
     padding: 10px;
 }
-  
+footer div a{
+    font-size: 20px;
+    color: blue;
+    text-decoration: none;
+}
+footer div a:hover{
+    color: red;
+}
