--- a/css/styles.css
+++ b/css/styles.css
@@ -4,11 +4,16 @@
 th{
     padding: 10px 10px;
     background-color: lightgray;
+    font-size: large;
+    font-weight: bold;
+    color: rgb(245, 14, 14);
 }
  td, tr {
     border: 1px solid rgb(172, 166, 166);
     padding: 10px 10px;
     text-align: center;
+    font-size: 20px;
+    
   } 
   td{
       text-align: center;
@@ -16,6 +21,14 @@ th{
   tr{
       margin-top: 10px;
       background-color: aliceblue;
+  }
+  #table-style{
+      margin-right: 100px;
+  }
+  #table-style tr{
+      color: rgb(41, 41, 235);
+      font-weight: bold;
+      
   }
  
   #salmon-img{
